# fixed-wing_simulator_ros

./: CMakeLists.txt  readme.md
src/: readme.md
src/ego_planner/bspline_opt/: CMakeLists.txt
src/ego_planner/bspline_opt/include/bspline_opt/: bspline_optimizer.h
src/ego_planner/bspline_opt/src/: bspline_optimizer.cpp
src/ego_planner/path_searching/include/path_searching/: dyn_a_star.h
src/ego_planner/path_searching/src/: dyn_a_star.cpp
src/ego_planner/planner/: CMakeLists.txt
src/ego_planner/planner/include/: planner_manager.h
src/ego_planner/planner/src/: planner_manager.cpp
src/ego_planner/planner_env/include/plan_env/: grid_map.h
src/ego_planner/planner_env/src/: grid_map.cpp
src/read_only/Utils/odom_visualization/src/: odom_visualization.cpp
src/read_only/Utils/quadrotor_msgs/: CMakeLists.txt
src/read_only/Utils/traj_server/: CMakeLists.txt  package.xml
src/read_only/fixed-wing_dynamics_simulator/autopilot/param/: control_params.yaml
src/read_only/fixed-wing_dynamics_simulator/autopilot/src/: autopilot.cpp  pid_controller.cpp
src/read_only/fixed-wing_dynamics_simulator/dynamics/param/: plane_params.yaml
src/read_only/fixed-wing_dynamics_simulator/dynamics/src/: mav_dynamics.cpp
src/read_only/fixed-wing_dynamics_simulator/so3_control/config/: gains_hummingbird.yaml
src/read_only/fixed-wing_dynamics_simulator/so3_control/src/: so3_control_nodelet.cpp
src/read_only/quadrotor_simulator/dynamics/src/: wind_sim.cpp
src/trajectory_generator/: CMakeLists.txt  package.xml
src/trajectory_generator/include/: Astar_searcher.h  bspline_opt.h  traj_server.h  uniform_bspline.h
src/trajectory_generator/launch/: demo.launch
src/trajectory_generator/launch/rviz_config/: demo.rviz
src/trajectory_generator/src/: Astar_searcher.cpp  traj_server.cpp  trajectory_generator_node.cpp  uniform_bspline.cpp
(+7 files in other folders)
